--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -29,6 +29,7 @@ nav ul li{
     
 }
 nav ul li a{
+    font-size: 17px;
     transition:all 0.5s ease ;
     -webkit-transition:all 0.5s ease ;
     -moz-transition:all 0.5s ease ;
