--- a/src/component/navbar/navbar.css
+++ b/src/component/navbar/navbar.css
@@ -30,10 +30,14 @@ nav ul li{
 }
 nav ul li a{
     font-size: 17px;
+    color:black !important;
     transition:all 0.5s ease ;
     -webkit-transition:all 0.5s ease ;
     -moz-transition:all 0.5s ease ;
     -ms-transition:all 0.5s ease ;
     -o-transition:all 0.5s ease ;
+}
+nav ul li a:hover{
+    color:white !important;
 }
 
