added memory and camera in the list

--- a/src/component/buy/buylist.css
+++ b/src/component/buy/buylist.css
@@ -9,9 +9,9 @@
     padding: 30px 5px;
 }
 
-#getBuy{
+/* #getBuy{
     box-shadow:  0 0 50px rgb(187, 140, 39) inset;
-}
+} */
 
 #add_cart_alert{
     /* display: none; */
