--- a/src/component/appbody/appbody.css
+++ b/src/component/appbody/appbody.css
@@ -1,10 +1,10 @@
-.table{
+.tablebody{
    margin: 0 auto !important;
   
    width: 50%;
    height: 50%;
 }
-.table tr a td{
+.tablebody tr a td{
    width: 275px;
    height: 300px;
    margin: 200px;
@@ -16,13 +16,13 @@
    -o-transition:all 0.5s ease ;
    
 }
-.table tr td:hover{
+.tablebody tr td:hover{
     background-color: rgb(124, 100, 48);
     box-shadow:  0 0 50px rgb(236, 173, 37) inset;
    
     color:white;
  }
-.table tr{
+.tablebody tr{
     margin: 0 auto;
 }
 #table{
